# ChangeLog for sys-libs/cracklib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.162 2012/02/22 00:59:51 patrick Exp $

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting jython

  20 Feb 2012; Torsten Veller <tove@gentoo.org> cracklib-2.8.18-r1.ebuild:
  Fix broken header

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting pypy

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.18-r1.ebuild,
  +files/cracklib-2.8.18-python-stat.patch:
  Pull in sys/stat.h in python code to fix build #403777 by Patrick Lauer.

*cracklib-2.8.18-r1 (20 Nov 2011)

  20 Nov 2011; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.18-r1.ebuild:
  Add USE=static-libs support #378291 by Agostino Sarubbo.

*cracklib-2.8.18 (29 Sep 2010)

  29 Sep 2010; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.18.ebuild:
  Version bump.

  28 Sep 2010; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.16.ebuild,
  +files/cracklib-2.8.16-no-nls.patch:
  Fix nls handling in python module too.

  02 Aug 2010; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.16.ebuild:
  Stable for PPC (bug #329149).

  24 Jul 2010; Raúl Porcel <armin76@gentoo.org> cracklib-2.8.16.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #329149

  23 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  cracklib-2.8.16.ebuild, +files/cracklib-2.8.16-python.patch:
  Fix building of Python bindings when cracklib isn't already installed.
  Approved by Chainsaw.

  23 Jul 2010; Peter Volkov <pva@gentoo.org> cracklib-2.8.16.ebuild:
  amd64 stable, bug 329149

  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  cracklib-2.8.16.ebuild:
  ppc64 stable wrt #329149

  21 Jul 2010; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.16.ebuild: