@@ -6,15 +6,17 @@ AUX cracklib-2.8.16-python.patch 303 RMD160 077bc8949315dbc6df0d26cc0bd247db9f5d
 AUX cracklib-2.8.18-python-stat.patch 915 RMD160 17e821fc15d6d529ef07814b0a26b079aba75a10 SHA1 ab01cb94d8cf6d5e3a9b216e64542ebc17ede2b5 SHA256 ae271c1a6a967e3520ca15e42141daecaba26ecef0a6d52d06bb25b571bd0575
 DIST cracklib-2.8.16.tar.gz 618120 RMD160 b2032ebe4c476fe273a1daab13764f62520c14c0 SHA1 21c181ed22ab7ab1e178c09fa251c9615f9f336c SHA256 fc3aa492c2879e304bae30955ab8b37d6865d26f79d0493b8c36a9bc1b6475bc
 DIST cracklib-2.8.18.tar.gz 587311 RMD160 2bfa3e8175413756079d811116a647957fa9b9e5 SHA1 3c4df51b13047fd7a85ae470f568abf8a8d6f92b SHA256 2b072f67f7267358459424c3ed70f7f5b70919118e6504a90d3bce37a67c1454
+DIST cracklib-2.8.19.tar.gz 611602 RMD160 ad2e26fbb52efee4a5b7e875183412b2b6211a2e SHA1 29224f51db85e1946c209f6ef6c38da699a9c7cc SHA256 7086b0ca23f875c9cd9ea2a993c262384b274dba9c4ea1da845ec8ac290748a9
 EBUILD cracklib-2.8.16.ebuild 2163 RMD160 68b4ad91cbccab2f52f76772e0cf87b418360162 SHA1 3ae8b1f3f7e07044b6ce65481edbf14776c8baf1 SHA256 fb6b0f8ae4d87ac6d10994d032223986f481482e752835cdf03f5512133ac109
 EBUILD cracklib-2.8.18-r1.ebuild 2199 RMD160 20a2cb799f320b20f2d03306ffbbff4e2e1a93cf SHA1 8cf1f669d0438dc770a049ffed9f62c95a4eb0f0 SHA256 4dfea4dafc4dd1c6776d756f04d776a3bc820926ed30c3e0bd07de1a4e533d6e
 EBUILD cracklib-2.8.18.ebuild 2074 RMD160 7bb71d8b86d9afbc0a2b2fdef19f74415f422637 SHA1 42c9321f57f798a4f18732454c066a223270815b SHA256 d86dff9ef49b2f30f2caf6f4c1f264aa1eda51d319c32855a56ed11e988c346f
-MISC ChangeLog 20868 RMD160 e6d825952f2b286ed2a22e4d74b93a8de9941a5e SHA1 ba1f978978f0a10c277e2c26c09fcca0e61ca24e SHA256 a16a19fb74802cfd89d0a40de9383d2fa775d85d620150a57c30ca0096deb2df
+EBUILD cracklib-2.8.19.ebuild 2300 RMD160 288f1718304b8fc472793af31984cd581bc730b1 SHA1 bbaaa74cc96ef41820d9c27f5aff0ac1a0e3be5a SHA256 143e9d88cfe480268a3deeac75aea6210b2090050a8e093250ffeb576f77a938
+MISC ChangeLog 21088 RMD160 2e8e9e5ee933c559215046afcaa2b230baecc271 SHA1 6a7286a4450f92c0d9aaf8a032d4eab0f41e5c4e SHA256 a256168cd4a75f67bee37086224f6451e46f48e7ca146273a9c929f9d3ff4032
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/A5igACgkQX3X2B8XHTono+wCgifP4yLlVgxkPE2zFvixNLwJS
-SxYAn2mxPIDDZREa2m1INnHLKVwo4XqV
-=W3jI
+iEYEARECAAYFAk/CGPkACgkQX3X2B8XHToljbQCgih9mno3LtrLCJBcqamMktBVV
+Fn8AoJAz0DcRdkHuS+7F30lKg+8qbVDW
+=94CN
 -----END PGP SIGNATURE-----
