@@ -1,6 +1,14 @@
 # ChangeLog for sys-libs/cracklib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.162 2012/02/22 00:59:51 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.164 2012/05/18 20:19:49 vapier Exp $
+
+  18 May 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.19.ebuild:
+  Make zlib optional.
+
+*cracklib-2.8.19 (18 May 2012)
+
+  18 May 2012; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.19.ebuild:
+  Version bump.
 
   22 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
   cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
